# budget-fixer

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  environment.yaml  expenses.csv  main.py  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
expense-classifier/: MLProject  README.md  conda_env.yaml  prepare_data_set.py  train.py
expense-classifier/expense_classifier/: settings.py  train.py
expense-classifier/expense_classifier/tests/: test.py  test_train.py
models/expense-classifier/: MLProject
models/expense-classifier/expense_classifier/: mlflow_helpers.py  prepare_data_set.py  settings.py  train.py
models/expense-classifier/expense_classifier/tests/: test_train.py
models/nltk-nb/: MLProject  conda_env.yaml  research.py
models/nltk-nb/expenses_classifier/: MLmodel
models/nltk-nb/tests/: payload.json
research/: research.ipynb  research.py
toshl-fixer/: Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
toshl-fixer/toshl_fixer/: app.py  cli.py  settings.py
toshl-fixer/toshl_fixer/classifiers/: naive_bayes.py  remote_classification.py  tfidf_tree.py
toshl-fixer/toshl_fixer/core/: auto_tag.py  delete_credit_entries.py  delete_duplicates.py  fetch.py  infer.py  manual_tag.py
toshl-fixer/toshl_fixer/data_access/: expenses.py
toshl-fixer/toshl_fixer/toshl/: labels.py
toshl_fixer/: app.py  cli.py  common.py  fetch_data.py  prepare_data.py  settings.py  tag_classifier.py  tag_entries.py  tag_manual.py  tagging.ipynb
toshl_fixer/archive/: _example.py  _old_code.py
toshl_fixer/classifiers/: naive_bayes.py  tfidf_tree.py
toshl_fixer/core/: auto_tag.py  delete_credit_entries.py  delete_duplicates.py  fetch.py  tag.py
toshl_fixer/data/: expenses.py  labels.py
toshl_fixer/tagging/: tag_entries.py
toshl_fixer/toshl/: entry.py  expenses.py  fetch_expenses.py  labels.py  update.py
toshl_fixer/utils/: common.py  expense.py
