[tool.poetry]
name = "toshl-fixer"
version = "0.1.0"
description = "Hacking Toshl scripts"
authors = ["Noam Elfanbaum <noam.elf@gmail.com>"]

[tool.poetry.dependencies]
click = "7.0"
nltk = "3.4.5"
pandas = "0.25.3"
prompt-toolkit = "2.0.10"
python = "^3.8.0"
python-dotenv = "0.10.3"
scikit-learn = "0.22.1"
toshl = { git = "https://github.com/noamelf/toshl-python.git", branch = "master" }

[tool.poetry.dev-dependencies]
#black = "19.10b0"

[tool.poetry.scripts]
toshl-fixer = 'toshl_fixer.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
