[tool.poetry]
name = "toshl-fixer"
version = "0.1.0"
description = "Hacking Toshl scripts"
authors = ["Noam Elfanbaum <noam.elf@gmail.com>"]

[tool.poetry.dependencies]
click = "7.0"
pandas = "0.25.3"
prompt-toolkit = "2.0.10"
python = "^3.8.0"
python-dotenv = "0.10.3"
toshl = { url = "https://github.com/noamelf/toshl-python/releases/download/20.05/toshl-0.0.4-py3-none-any.whl" }
flask = "^1.1.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
ipdb = "*"
#black = "19.10b0"

[tool.poetry.scripts]
toshl-fixer = 'toshl_fixer.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
